# multitasking

./: README.md  pyproject.toml
tasks/: ticket_seller.py
tasks/dining_philosophers/: dinning_lock.py  dinning_resolution.py
tasks/lock/: threading_synchronization_problem.py  threading_synchronization_resolution.py
